# daily-auto

./: README.md  setup.py
.github/: config.json
.github/workflows/: excavator.yml  update.yml
bucket/: ga_1999_cn.json  ga_1999_na.json  ga_ark_global.json  ga_arknights.json  ga_gf2_cn.json  ga_gf2_gl.json
dauto/: README.md  init.py  pyproject.toml
dauto/src/dauto/cli/: main.py
dauto/src/dauto/cli/debug/: scoop.py
dauto/src/dauto/utils/: scoop.py
